--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,19 @@
         <java.version>1.7</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-
         <encoding>UTF-8</encoding>
         <archetype.encoding>${encoding}</archetype.encoding>
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
         <project.resources.outputEncoding>${encoding}</project.resources.outputEncoding>
+        <docker.compose.maven.plugin.version>2.2.0</docker.compose.maven.plugin.version>
     </properties>
 
     <modules>
         <module>frontend</module>
         <module>backend</module>
+        <module>docs</module>
+        <module>docker</module>
     </modules>
 
     <build>
@@ -49,6 +51,21 @@
                         <nodeVersion>v10.15.0</nodeVersion>
                         <npmVersion>6.4.1</npmVersion>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.asciidoctor</groupId>
+                    <artifactId>asciidoctor-maven-plugin</artifactId>
+                    <version>1.5.7.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.1.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.dkanejs.maven.plugins</groupId>
+                    <artifactId>docker-compose-maven-plugin</artifactId>
+                    <version>${docker.compose.maven.plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
