--- a/docker/src/main/docker/docker-compose.yaml
+++ b/docker/src/main/docker/docker-compose.yaml
@@ -17,8 +17,8 @@ services:
       postgres:
         condition: service_healthy
     build:
-      context: ../
-      dockerfile: ./docker/Dockerfile
+      context: ../../../..
+      dockerfile: ./docker/src/main/docker/Dockerfile
     restart: unless-stopped
     ports:
       - '5005:5005'
