Add few development scripts. Add blog REST API index.html file.

--- a/docker/src/main/docker/Dockerfile
+++ b/docker/src/main/docker/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 5005
 HEALTHCHECK --timeout=1s --retries=66 \
         CMD wget -q --spider http://127.0.0.1:8080/blog/api/health \
          || exit 1
-ADD --chown=jboss ./docker/src/main/docker/jboss-eap-6.4/modules/org/postgresql ${JBOSS_HOME}/modules/org/postgresql
-ADD --chown=jboss ./docker/src/main/docker/jboss-eap-6.4/standalone/configuration/standalone.xml ${JBOSS_HOME}/standalone/configuration/standalone.xml
-ADD --chown=jboss ./backend/target/*.war ${JBOSS_HOME}/standalone/deployments/blog.war
-
+ADD --chown=jboss ./docker/target/modules/org/postgresql/main/*.jar                               ${JBOSS_HOME}/modules/org/postgresql/main/postgresql-9.4-1206-jdbc4.jar
+ADD --chown=jboss ./docker/src/main/docker/jboss-eap-6.4/modules/org/postgresql/main/module.xml   ${JBOSS_HOME}/modules/org/postgresql/main/module.xml
+ADD --chown=jboss ./docker/src/main/docker/jboss-eap-6.4/standalone/configuration/standalone.xml  ${JBOSS_HOME}/standalone/configuration/standalone.xml
+ADD --chown=jboss ./backend/target/*.war                                                          ${JBOSS_HOME}/standalone/deployments/
