--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <artifactId>blog</artifactId>
         <groupId>com.github.sigma</groupId>
@@ -12,38 +13,99 @@
     <artifactId>docker</artifactId>
     <packaging>pom</packaging>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>copy</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>copy</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>org.postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <version>9.4-1206-jdbc4</version>
+                                <type>jar</type>
+                                <overWrite>false</overWrite>
+                                <!--<destFileName>optional-new-name.jar</destFileName>-->
+                            </artifactItem>
+                        </artifactItems>
+                        <outputDirectory>${project.build.directory}/modules/org/postgresql/main</outputDirectory>
+                        <overWriteReleases>false</overWriteReleases>
+                        <overWriteSnapshots>true</overWriteSnapshots>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.dkanejs.maven.plugins</groupId>
+                    <artifactId>docker-compose-maven-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>up</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>up</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>down</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>down</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>help</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>help</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <build>true</build>
+                        <composeFile>${project.basedir}/src/main/docker/docker-compose.yaml</composeFile>
+                        <detachedMode>true</detachedMode>
+                        <removeImages>true</removeImages>
+                        <removeImagesType>local</removeImagesType>
+                        <removeOrphans>true</removeOrphans>
+                        <removeVolumes>true</removeVolumes>
+                        <!--<verbose>true</verbose>-->
+                        <detail>true</detail>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
     <profiles>
         <profile>
-            <id>deps</id>
+            <id>up</id>
             <build>
-                <defaultGoal>clean package</defaultGoal>
+                <defaultGoal>dependency:copy docker-compose:up</defaultGoal>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>copy</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                         <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.postgresql</groupId>
-                                    <artifactId>postgresql</artifactId>
-                                    <version>9.4-1206-jdbc4</version>
-                                    <type>jar</type>
-                                    <overWrite>false</overWrite>
-                                    <!--<destFileName>optional-new-name.jar</destFileName>-->
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>${project.build.directory}/modules/org/postgresql/main</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>true</overWriteSnapshots>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.dkanejs.maven.plugins</groupId>
+                        <artifactId>docker-compose-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -51,49 +113,36 @@
         </profile>
 
         <profile>
-            <id>docker</id>
+            <id>down</id>
             <build>
+                <defaultGoal>docker-compose:down</defaultGoal>
                 <plugins>
                     <plugin>
                         <groupId>com.dkanejs.maven.plugins</groupId>
                         <artifactId>docker-compose-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>up</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>up</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>down</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>down</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>help</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>help</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                         <configuration>
-                            <build>true</build>
-                            <composeFile>${project.basedir}/src/main/docker/docker-compose.yaml</composeFile>
-                            <detachedMode>true</detachedMode>
-                            <removeImages>true</removeImages>
-                            <removeImagesType>local</removeImagesType>
-                            <removeOrphans>true</removeOrphans>
-                            <removeVolumes>true</removeVolumes>
-                            <!--<verbose>true</verbose>-->
-                            <detail>true</detail>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>help</id>
+            <build>
+                <defaultGoal>docker-compose:help</defaultGoal>
+                <plugins>
+                    <plugin>
+                        <groupId>com.dkanejs.maven.plugins</groupId>
+                        <artifactId>docker-compose-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
     </profiles>
+
 </project>
