--- a/.travis.yml
+++ b/.travis.yml
@@ -33,17 +33,34 @@ before_install:
   #
   - sudo pip install docker-compose httpie >/dev/null 2>&1
   - source <(curl -s https://raw.githubusercontent.com/daggerok/bash-functions/master/main.bash)
-  - stop_any 80 5432
+  - stop_any 80 8080 5432 8443 9990 9999
 
 script:
-  - ./mvnw -pl :backend,:frontend
-  - ./mvnw -pl :docker -Pdocker docker-compose:up
-  #- docker-compose -f ./docker/src/main/docker/docker-compose.yaml logs -f -t &
+#  - ./mvnw -pl :backend,:frontend >/dev/null
+  - ./mvnw -pl :backend >/dev/null
+  - ./mvnw -pl :docker -Pup
+  - ./bin/tail-logs.sh &
+  - stop_time=$(date -d "today + 2 minutes" "+%Y%m%d%H%M")
   - while [[ $(docker ps --quiet --last 2 --filter health=healthy | wc -l) -lt 2 ]] ; do
       echo -ne '.' ; sleep 2s ;
+      echo -ne $(docker ps --quiet --last 2 --filter health=healthy | wc -l) ;
+      current_time=$(date -d $(date +%Y-%m-%dT%H:%M) "+%Y%m%d%H%M") ;
+      if [ "$current_time" -ge "$stop_time" ] ; then echo 'breaking while loop...' ; break ; fi ;
     done
-  - http posts :8080/blog/api/
-  - http posts :8080/blog/api/posts/new?postText=trololo
-  - http posts :8080/blog/api/posts/all
-  - http posts :8080/blog/api/posts/one id=00000000-0000-0000-0000-000000000000                 || echo 'expected 400 HTTP status code.'
-  - http put :8080/blog/api/posts/edit id=00000000-0000-0000-0000-000000000000 postText=ololo  || echo 'expected 400 HTTP status code.'
+  - sleep 5
+  - http    get 0.0.0.0:8080/blog
+  - http    get 0.0.0.0:8080/blog/
+  - http    get 0.0.0.0:8080/blog/index.html
+  - http    get 0.0.0.0:8080/blog/api
+  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-by-id id=00000000-0000-0000-0000-000000000000            || echo 'expected 400 HTTP status code.'
+  - http   post 0.0.0.0:8080/blog/api/v1/posts/create data="# trololo"
+  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-all
+  - http    put 0.0.0.0:8080/blog/api/v1/posts/update id=00000000-0000-0000-0000-000000000000 data="# ololo" || echo 'expected 400 HTTP status code.'
+  - http delete 0.0.0.0:8080/blog/api/v1/posts/delete id=00000000-0000-0000-0000-000000000000                || echo 'expected 400 HTTP status code.'
+  - ./mvnw -pl :docker -Pdown
+
+cache:
+  directories:
+    - ./frontend/node_modules
+    - ~/.docker
+    - ~/.m2
