--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,6 +19,7 @@
         <hibernate.validator.version>4.3.2.Final</hibernate.validator.version>
         <hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
         <javaee.version>7.0</javaee.version>
+        <jersey.version>2.28</jersey.version>
     </properties>
 
     <dependencyManagement>
@@ -30,6 +31,16 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>${version.resteasy}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxb-provider</artifactId>
+            <version>${version.resteasy}</version>
+        </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -116,12 +127,6 @@
             <version>2.23.0</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>2.9.1</version>
-            <!--<scope>test</scope>--><!-- FIXME: Arquillian magic-->
-        </dependency>
 
         <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
@@ -133,9 +138,43 @@
             <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- REST client -->
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey.version}</version>
+            <!--<scope>test</scope>--><!-- FIXME: Arquillian magic -->
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>${jersey.version}</version>
+            <!--<scope>test</scope>--><!-- FIXME: Arquillian magic -->
+        </dependency>
+        <!-- assertj -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>2.9.1</version>
+            <!--<scope>test</scope>--><!-- FIXME: Arquillian magic -->
+        </dependency>
+        <!-- f*ing arquillian dependencies problem solving -->
+        <dependency>
+            <groupId>org.jboss.profileservice</groupId>
+            <artifactId>jboss-profileservice-spi</artifactId>
+            <version>0.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.client</groupId>
+            <artifactId>jbossall-client</artifactId>
+            <version>5.0.0.GA</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
+        <defaultGoal>clean package</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -146,16 +185,59 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.1</version>
+                    <configuration>
+                        <!--<includes>
+                            <include>**/*Test.java</include>
+                        </includes>-->
+                        <excludes>
+                            <exclude>**/*IT.java</exclude>
+                            <exclude>**/*IntegrationTest.java</exclude>
+                        </excludes>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>integration-test</id>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                            <phase>integration-test</phase>
+                            <configuration>
+                                <excludes>
+                                    <exclude>none</exclude>
+                                    <!--<exclude>**/*Test.java</exclude>-->
+                                </excludes>
+                                <includes>
+                                    <include>**/*IT.java</include>
+                                    <include>**/*IntegrationTest.java</include>
+                                </includes>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <profiles>
         <profile>
             <id>it</id>
+            <build>
+                <defaultGoal>integration-test</defaultGoal>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.as</groupId>
@@ -171,6 +253,89 @@
                 </dependency>
             </dependencies>
         </profile>
+
+        <profile>
+            <id>ci</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <scope>test</scope>
+                    <version>7.1.1.Final</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.protocol</groupId>
+                    <artifactId>arquillian-protocol-servlet</artifactId>
+                    <version>1.1.11.Final</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <defaultGoal>package integration-test</defaultGoal>
+                <!--<defaultGoal>package integration-test docker-compose:down</defaultGoal>-->
+                <!-- docker-compose:up goal will be executed automatically before integration tests -->
+                <plugins>
+                    <plugin>
+                        <groupId>com.dkanejs.maven.plugins</groupId>
+                        <artifactId>docker-compose-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>com.dkanejs.maven.plugins</groupId>
+                            <artifactId>docker-compose-maven-plugin</artifactId>
+                            <version>2.3.0</version>
+                            <executions>
+                                <execution>
+                                    <id>up</id>
+                                    <phase>pre-integration-test</phase>
+                                    <goals>
+                                        <goal>up</goal>
+                                    </goals>
+                                </execution>
+                                <execution>
+                                    <id>down</id>
+                                    <phase>post-integration-test</phase>
+                                    <goals>
+                                        <goal>down</goal>
+                                    </goals>
+                                </execution>
+                                <execution>
+                                    <id>help</id>
+                                    <phase>verify</phase>
+                                    <goals>
+                                        <goal>help</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <build>true</build>
+                                <composeFile>${project.basedir}/../docker/src/main/docker/docker-compose-ci.yaml</composeFile>
+                                <detachedMode>true</detachedMode>
+                                <removeImages>true</removeImages>
+                                <removeImagesType>local</removeImagesType>
+                                <removeOrphans>true</removeOrphans>
+                                <removeVolumes>true</removeVolumes>
+                                <!--<verbose>true</verbose>-->
+                                <detail>true</detail>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
     </profiles>
+
+    <repositories>
+        <repository>
+            <id>glassfish-repository</id>
+            <url>https://maven.java.net/content/repositories/releases/</url>
+        </repository>
+        <repository>
+            <id>jboss-repository</id>
+            <url>http://repo.spring.io/plugins-release/</url>
+        </repository>
+    </repositories>
 
 </project>
