Add integration tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,27 +37,23 @@ before_install:
 
 script:
 #  - ./mvnw -pl :backend,:frontend >/dev/null
-  - ./mvnw -pl :backend >/dev/null
-  - ./mvnw -pl :docker -Pup
-  - ./bin/tail-logs.sh &
-  - stop_time=$(date -d "today + 2 minutes" "+%Y%m%d%H%M")
-  - while [[ $(docker ps --quiet --last 2 --filter health=healthy | wc -l) -lt 2 ]] ; do
-      echo -ne '.' ; sleep 2s ;
-      echo -ne $(docker ps --quiet --last 2 --filter health=healthy | wc -l) ;
-      current_time=$(date -d $(date +%Y-%m-%dT%H:%M) "+%Y%m%d%H%M") ;
-      if [ "$current_time" -ge "$stop_time" ] ; then echo 'breaking while loop...' ; break ; fi ;
-    done
-  - sleep 5
-  - http    get 0.0.0.0:8080/blog
-  - http    get 0.0.0.0:8080/blog/
-  - http    get 0.0.0.0:8080/blog/index.html
-  - http    get 0.0.0.0:8080/blog/api
-  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-by-id id=00000000-0000-0000-0000-000000000000            || echo 'expected 400 HTTP status code.'
-  - http   post 0.0.0.0:8080/blog/api/v1/posts/create data="# trololo"
-  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-all
-  - http    put 0.0.0.0:8080/blog/api/v1/posts/update id=00000000-0000-0000-0000-000000000000 data="# ololo" || echo 'expected 400 HTTP status code.'
-  - http delete 0.0.0.0:8080/blog/api/v1/posts/delete id=00000000-0000-0000-0000-000000000000                || echo 'expected 400 HTTP status code.'
-  - ./mvnw -pl :docker -Pdown
+#  - ./mvnw -pl :backend >/dev/null
+#  - ./mvnw -f docker/pom.xml -P ci-up
+#  - ./bin/tail-logs.sh &
+#  - http    get 0.0.0.0:8080/blog
+#  - http    get 0.0.0.0:8080/blog/
+#  - http    get 0.0.0.0:8080/blog/index.html
+#  - http    get 0.0.0.0:8080/blog/api
+#  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-by-id id=00000000-0000-0000-0000-000000000000            || echo 'expected 400 HTTP status code.'
+#  - http   post 0.0.0.0:8080/blog/api/v1/posts/create data="# trololo"
+#  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-all
+#  - http    put 0.0.0.0:8080/blog/api/v1/posts/update id=00000000-0000-0000-0000-000000000000 data="# ololo" || echo 'expected 400 HTTP status code.'
+#  - http delete 0.0.0.0:8080/blog/api/v1/posts/delete id=00000000-0000-0000-0000-000000000000                || echo 'expected 400 HTTP status code.'
+#  - ./mvnw -pl :docker -Pci-down
+
+  - ./mvnw -pl :backend,:frontend >/dev/null
+  - ./mvnw -f docker/pom.xml -P ci-up
+  - ./mvnw -f integration-tests/pom.xml -P ci
 
 cache:
   directories:
