Fix CI build. Remove useless maven profiles.

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,6 @@ before_install:
   - stop_any 80 8080 5432 8443 9990 9999
 
 script:
-#  - ./mvnw -pl :backend,:frontend >/dev/null
-#  - ./mvnw -pl :backend >/dev/null
-#  - ./mvnw -f docker/pom.xml -P ci-up
-#  - ./bin/tail-logs.sh &
 #  - http    get 0.0.0.0:8080/blog
 #  - http    get 0.0.0.0:8080/blog/
 #  - http    get 0.0.0.0:8080/blog/index.html
@@ -49,11 +45,10 @@ script:
 #  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-all
 #  - http    put 0.0.0.0:8080/blog/api/v1/posts/update id=00000000-0000-0000-0000-000000000000 data="# ololo" || echo 'expected 400 HTTP status code.'
 #  - http delete 0.0.0.0:8080/blog/api/v1/posts/delete id=00000000-0000-0000-0000-000000000000                || echo 'expected 400 HTTP status code.'
-#  - ./mvnw -pl :docker -Pci-down
-
   - ./mvnw -pl :backend,:frontend >/dev/null
   - ./mvnw -f docker/pom.xml -P ci-up
-  - ./mvnw -f integration-tests/pom.xml -P ci
+  - ./mvnw -f integration-tests/pom.xml -P it
+  - ./mvnw -f docker/pom.xml -P ci-down
 
 cache:
   directories:
