Fix Blog data creation. Move blog CLI test data operations out from tests into separate blog-cli moduke. Fix CORS filter in backend module. Fix posts fetching in frontend module.

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>docs</module>
         <module>docker</module>
         <module>integration-tests</module>
+        <module>blog-cli</module>
     </modules>
 
     <build>
