--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -91,6 +91,12 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
     <build>
