--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,18 @@
   <error-page>
     <location>/index.html</location>
   </error-page>
+
+  <filter>
+    <filter-name>CORS</filter-name>
+    <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+    <!--<filter-class>com.thetransactioncompany.cors.autoreconf.AutoReconfigurableCORSFilter</filter-class>-->
+    <init-param>
+      <param-name>cors.supportedMethods</param-name>
+      <param-value>GET, POST, PUT, DELETE, HEAD, OPTIONS, PATCH</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>CORS</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
