--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "2.5.22",
+    "markdown-it": "8.4.2",
+    "vue": "2.6.6",
     "vue-router": "3.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.3.0",
-    "@vue/cli-service": "3.3.1",
+    "@vue/cli-plugin-babel": "3.4.0",
+    "@vue/cli-service": "3.4.0",
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
-    "vue-template-compiler": "2.5.22"
+    "vue-template-compiler": "2.6.6"
   }
 }
