--- a/blog-cli/pom.xml
+++ b/blog-cli/pom.xml
@@ -11,6 +11,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>blog-cli</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <!-- why??? https://stackoverflow.com/questions/44088493/jersey-stopped-working-with-injectionmanagerfactory-not-found -->
@@ -18,7 +19,6 @@
     </properties>
 
     <dependencies>
-        <!-- in java we trust -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -51,6 +51,34 @@
 
     <build>
         <defaultGoal>clean package</defaultGoal>
+        <plugins>
+            <plugin><!-- fat jar -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <finalName>${project.artifactId}-${project.version}-all</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest><!-- java -cp blog-cli/target/*-all.jar com.github.sigma.blog.TestData -->
+                            <mainClass>com.github.sigma.blog.TestData</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>assemble-jar-with-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
     <profiles>
