--- a/docker/src/main/docker/docker-compose.yaml
+++ b/docker/src/main/docker/docker-compose.yaml
@@ -8,9 +8,9 @@ services:
       POSTGRES_USER: sa
       POSTGRES_PASSWORD: sa
     networks:
-      my-blog.com:
+      my-blog-private-net:
         aliases:
-          - db.my-blog.com
+          - db.my-blog-private-net
   jboss:
     depends_on:
       postgres:
@@ -27,12 +27,12 @@ services:
       POSTGRES_DB: db
       POSTGRES_USER: sa
       POSTGRES_PASSWORD: sa
-      POSTGRES_HOST: db.my-blog.com
+      POSTGRES_HOST: db.my-blog-private-net
     networks:
-      my-blog.com:
+      my-blog-private-net:
         aliases:
-          - blog.my-blog.com
-          - jboss.my-blog.com
+          - blog.my-blog-private-net
+          - jboss.my-blog-private-net
 networks:
-  my-blog.com:
+  my-blog-private-net:
     driver: bridge
