--- a/frontend/.env.play-with-docker-dev
+++ b/frontend/.env.play-with-docker-dev
@@ -1,2 +1,2 @@
 NODE_ENV=development
-VUE_APP_BLOG_SERVICE_BASE_URL=http://ip172-18-0-38-bhn9vpdrori000djpjlg-80.direct.labs.play-with-docker.com/blog
+VUE_APP_BLOG_SERVICE_BASE_URL=/blog
