--- a/.travis.yml
+++ b/.travis.yml
@@ -44,13 +44,14 @@ script:
 #  - http   post 0.0.0.0:8080/blog/api/v1/posts/create title="# title" body="# trololo"
 #  - http    get 0.0.0.0:8080/blog/api/v1/posts/find-all
 #  - http    put 0.0.0.0:8080/blog/api/v1/posts/update id=00000000-0000-0000-0000-000000000000 title="title" body
-  ="# ololo" || echo 'expected 400 HTTP status code.'
+# ololo" || echo 'expected 400 HTTP status code.'
 #  - http delete 0.0.0.0:8080/blog/api/v1/posts/delete id=00000000-0000-0000-0000-000000000000                || echo 'expected 400 HTTP status code.'
   - ./mvnw -pl :backend,:frontend >/dev/null
   - ./mvnw -f docker/pom.xml -P ci-up
   - ./mvnw -f integration-tests/pom.xml -P it
   - ./mvnw -f docker/pom.xml -P ci-down
   #
+  - ./mvnw -pl :blog-cli >/dev/null
   - ./mvnw -f docker/pom.xml -P all-up
   - http :80/
   - http :80/blog/api
